# Telegram-bot

./: .gitignore  Dockerfile  pyproject.toml
telegram_bestbet_bot/: build.py  data.json  main.py  passgen.py
telegram_echo_bots/: echo.py  echo_full_checks.py
